--- a/config/settings.html
+++ b/config/settings.html
@@ -115,12 +115,18 @@
         </select>
       </td>
     </tr>       
-    <tr>
-      <th><label for="linklist_highlight">ลิงค์ลิสต์ ภาพไฮไลท์</label></th>
+   <tr>
+      <th><label for="linklist_highlight">ลิงค์ลิสต์ ภาพไฮไลท์ (583x240 px.)</label></th>
       <td>
         <select class="linklist" name="linklist_highlight" id="linklist_highlight" />
       </td>
-    </tr>        
+    </tr>
+   <tr>
+      <th><label for="linklist_banner">ลิงค์ลิสต์แบนเนอร์ (กว้างไม่เกิน 185 px.)</label></th>
+      <td>
+        <select class="linklist" name="linklist_banner" id="linklist_banner" />
+      </td>
+   </tr>          
    <tr>
       <th><label for="linklist_nav">ลิงค์ลิสต์ ด้านบน</label></th>
       <td>
